infrastructure/k8s/ingress/api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  labels:
    app: api
  annotations:
    external-dns.alpha.kubernetes.io/target: "proxy.inf.uct.cl"
spec:
  ingressClassName: nginx
  rules:
    - host: api-vmatus.dev.censei.cl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 8080
