infrastructure/k8s/ingress/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  labels:
    app: frontend
  annotations:
    external-dns.alpha.kubernetes.io/target: "proxy.inf.uct.cl"
spec:
  ingressClassName: nginx
  rules:
    - host: miweb-vmatus.dev.censei.cl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
